k8s-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service1-ws-cluster-ip-service
spec:
  type: ClusterIP
  selector:
    component: service1-ws
  ports:
    - port: 8080
      targetPort: 8080

#apiVersion: v1
#kind: Service
#metadata:
#  name: spring-boot-docker
#spec:
#  type: NodePort
#  selector:
#    app: spring-boot-docker
#  ports:
#    - protocol: TCP
#      port: 8090
#      targetPort: 8080
