k8s-ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: ingress-service
  annotations:
    kubernetes.io/ingress.class: nginx
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  rules:
    - http:
        paths:
          - path: /service1-ws/?(.*)
            backend:
              serviceName: service1-ws-cluster-ip-service
              servicePort: 8080

#apiVersion: networking.k8s.io/v1beta1
#kind: Ingress
#metadata:
#  name: gateway-ingress
#  annotations:
#    nginx.ingress.kubernetes.io/rewrite-target: /
#spec:
#  rules:
#    - http:
#        paths:
#          - path: /test
#            pathType: Prefix
#            backend:
#              serviceName: spring-boot-docker
#              servicePort: 8090
